...
                                painter = painterResource(id = it),
                                contentDescription = null,
                                modifier = Modifier
                                    .align(Alignment.CenterHorizontally)
                                    .applyImageSize(imageWidth, imageHeight)
                                    .padding(bottom = 8.dp)
                                    .testTag("dialog_image")
                            )
                        }

                        message?.let {

                            Spacer(modifier = Modifier.height(20.dp))
...
